@@ -7,6 +7,7 @@ linux (3.10~rc7-1~exp2) UNRELEASED; urgency=low
   * [rt] genpatch.py: Work with upstream patch series as well as git
     - Fold convert-series into genpatch.py
   * [rt] genpatch.py: Add Origin header to all patches
+  * debian/bin/check-patches.sh: Report missing DEP-3 headers
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 01 Jul 2013 00:58:08 +0100
 
